--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,3 +1,14 @@
-<h1>Pages#about</h1>
-<p>Find me in app/views/pages/about.html.erb</p>
-
+<!DOCTYPE html>
+<html>
+  <head>
+    <title>about</title>
+  </head>
+  <body>
+    <h1>Sample App</h1>
+    <p>
+      This is the about page for the
+      <a href="http://railstutorial.org/">Ruby on Rails Tutorial Sample App | Home</a>
+      sample application.
+    </p>
+  </body>
+</html>
