--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -7,7 +7,7 @@
     <h1>Sample App</h1>
     <p>
       This is the home page for the
-      <a href="http://railstutorial.org/">Ruby on Rails Tutorial</a>
+      <a href="http://railstutorial.org/">Ruby on Rails Tutorial Sample App | Home</a>
       sample application.
     </p>
   </body>
