--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <title>Home</title>
+    <title>Ruby on Rails Tutorial Sample App | <%= @title %></title>
   </head>
   <body>
     <h1>Sample App</h1>
