--- a/app/views/pages/contact.html.erb
+++ b/app/views/pages/contact.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>Contact</title>
+   <head>
+    <title>Ruby on Rails Tutorial Sample App | <%= @title %></title>
   </head>
   <body>
     <h1>Sample App</h1>
