--- a/app/views/microposts/index.html.erb
+++ b/app/views/microposts/index.html.erb
@@ -1,5 +1,4 @@
-<h1>Listing microposts</h1>
-
+<%= render 'form' %>
 <table>
   <tr>
     <th>Content</th>
@@ -14,12 +13,16 @@
     <td><%= micropost.content %></td>
     <td><%= micropost.user_id %></td>
     <td><%= link_to 'Show', micropost %></td>
+  <% if micropost.user_id == @user %>
     <td><%= link_to 'Edit', edit_micropost_path(micropost) %></td>
     <td><%= link_to 'Destroy', micropost, :confirm => 'Are you sure?', :method => :delete %></td>
-  </tr>
+  </tr> 
+  <% end %>
 <% end %>
 </table>
 
 <br />
 
-<%= link_to 'New Micropost', new_micropost_path %>
+
+    
+
